# LeanEVM

./: .gitignore  CLAUDE.md  Evm.lean  MulLimbTest.lean  README.md  lakefile.lean  stall_sample.txt
.github/workflows/: lean_action_ci.yml
Conform/: Main.lean  Model.lean  TestParser.lean  TestRunner.lean  Wheels.lean
Evm/: BLAKE2_F.lean  BN_ADD.lean  BN_MUL.lean  EllipticCurves.lean  Exception.lean  ExecutionState.lean  ExecutionStateOps.lean  Gas.lean  Instr.lean  MachineState.lean  MachineStateOps.lean  Operations.lean  PointEval.lean  Precompiles.lean  Pretty.lean  PrimOps.lean  Python.lean  RIP160.lean  Rlp.lean  SHA256.lean  SNARKV.lean  Semantics.lean  SharedState.lean  SharedStateOps.lean  State.lean  StateOps.lean  Step.lean  UInt256.lean  Wheels.lean
Evm/Machine/: ExecutionState.lean  ExecutionStateOps.lean  MachineState.lean  MachineStateOps.lean  SharedState.lean  SharedStateOps.lean
Evm/Maps/: AccountMap.lean  StorageMap.lean
Evm/Semantics/: Call.lean  Create.lean  Decode.lean  Dispatch.lean  Frame.lean  Gas.lean  Halt.lean  Instructions.lean  Interpreter.lean  Params.lean  Precompiles.lean  PrimOps.lean  Smsf.lean  Step.lean  System.lean
Evm/State/: Account.lean  AccountOps.lean  Block.lean  BlockHeader.lean  ExecutionEnv.lean  (+4 more)
EvmYul/: BLAKE2_F.lean  BN_ADD.lean  BN_MUL.lean  CachedPython.lean  EllipticCurves.lean  MachineStateOps.lean  Operations.lean  PointEval.lean  Pretty.lean  Python.lean  RIP160.lean  SHA256.lean  SNARKV.lean  Semantics.lean  StateOps.lean  UInt256.lean  Wheels.lean
tools/evmrs/: Cargo.toml
tools/evmrs/src/: main.rs
(+16 files in other folders)
